--- a/Grupo2-Proyecto2/src/main/resources/templates/PagLogin.html
+++ b/Grupo2-Proyecto2/src/main/resources/templates/PagLogin.html
@@ -19,8 +19,8 @@
 				th:action="@{/login}">
 			<table>
 				<tr>
-					<td><label for="nombre">Id del usuario:</label></td>
-					<td><input type="text" th:field="*{idUsuario}" /></td>
+					<td><label for="id">Id del usuario:</label></td>
+					<td><input type="text" th:field="*{id}" /></td>
 				</tr>
 				<!--<tr>
 					<td><label for="id">Nombre Usuario</label></td>
@@ -36,7 +36,12 @@
 				<input type="submit" value="Login" />
 			</p>
 		</form>
-		
+      <form method="post" th:objet="${usuario}" th:action="@{/addUsuario}">
+          <input type="submit" value="Registrar">
+      </form>       
 	</div>
 </body>
+<script>
+    
+    </script>
 </html>
