--- a/Grupo2-Proyecto2/src/main/resources/static/css/estilos.css
+++ b/Grupo2-Proyecto2/src/main/resources/static/css/estilos.css
@@ -64,3 +64,14 @@ td{
     text-align: center;
     font-weight: lighter;
 }
+
+a{
+    text-decoration: none;
+    padding: 5px;
+    font-weight: 300;
+    font-size: 15px;
+    color: #ffffff;
+    background-color: #1883ba;
+    border-radius: 6px;
+    border: 2px solid #0016b0;
+  }
