--- a/Grupo2-Proyecto2/src/main/resources/templates/PagListado.html
+++ b/Grupo2-Proyecto2/src/main/resources/templates/PagListado.html
@@ -24,8 +24,8 @@
 					<td><span th:text="${usuario2.genero}" /></td>
 					<td><span th:text="${usuario2.edad}" /></td>
 					<td><span th:text="${usuario2.descripcion}" /></td>
- 					<td><a class="boton" th:href="@{darlike?id=}+${usuario2.id}" onclick="deshabilitar(this)">Like</a> | <a
- 						 class = "boton" th:href="@{dardislike?id=}+${usuario2.id}" onclick="deshabilitar(this)">Dislike</a></td> 
+ 					<td><a class="boton" th:href="@{darlike?id1=}+${usuario.id}+@{&id2=}+${usuario2.id}" onclick="deshabilitar(this)">Like</a> | <a
+ 						 class = "boton" href="#" onclick="deshabilitar(this)">Dislike</a></td>  
 				</tr>
 		</table>
 </body>
