login component hecho por el negro

--- a/Angular base ejemplo/src/app/app.component.html
+++ b/Angular base ejemplo/src/app/app.component.html
@@ -5,7 +5,7 @@
     </h1>
   </div>
   
-  <a routerLink="/users">List Users</a>
+  <a routerLink="/login">List Users</a>
   <a style="margin-left:10px" routerLink="/add">Add User</a>
   <br/>
   <router-outlet></router-outlet>
