--- a/Angular base ejemplo/src/app/components/login/login.component.html
+++ b/Angular base ejemplo/src/app/components/login/login.component.html
@@ -1,8 +1,182 @@
-<form [formGroup]="formulario" (ngSubmit)="login()">
+      <header class="masthead">
+          <div class="container d-flex h-100 align-items-center">
+              <div class="mx-auto text-center">
+                  <h1 class="mx-auto my-0 text-uppercase">LUCATINDER</h1>
+                  <h2 class="text-white-50 mx-auto mt-2 mb-5">Si no mohas, es porque no quieres HULIO</h2>
+
+                  <nav class="navbar">
+                      <form class = "form-inline" [formGroup]="formulario" (ndSubmit)="login()">
+                
+                          <label for="id">ID</label>
+                
+                          <input formControlName="id" placeholder="Introduce tu ID" id="perfil_id" class="form-control" />
+                
+                          <button class="btn btn-outline-success my-2 my-sm-0 m-4 " (click)="login()"  >VAMOS A LIGAR </button>
+                         </form>
+                          <form>
+                              <button type="submit" class="btn btn-success" value="Registrar" routerLink="/add">Darse de alta</button>   
+                                   
+                      </form>                
+                    </nav>
+              </div>
+          </div>
+          
+      </header>
   
-    <div class="form-group">
-      <input formControlName="id" placeholder="" id="perfil_id" class="form-control"/>
-    </div>
+      <!-- About Section -->
+      <section id="about" class="about-section text-center">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-8 mx-auto">
+                      <h2 class="text-white mb-4">Unete a la nueva comunidad de fuckers donde tus pringosos dedos con doritos y tu grasosa coleta no seran un problema para mojar el calamar!!!</h2>
+                      <p class="text-white-50">
+                          Con Lucatinder, nunca más te arrepentirás de haber elegido las sabanas de superman a tus 40 añazos... Aquí eso suma puntos!!!
+                      </p>
+                  </div>
+              </div>
+          </div>
+      </section>
   
-    <button class="btn btn-success" type="submit">Login</button>
-  </form>
+      <!-- Projects Section -->
+      <section id="projects" class="projects-section bg-light">
+          <div class="container">
+  
+              <!-- Featured Project Row -->
+              <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                  <div class="col-xl-8 col-lg-7">
+                      <img class="img-fluid mb-3 mb-lg-0" src="../../../assets/41.jpg" alt="">
+                  </div>
+                  <div class="col-xl-4 col-lg-5">
+                      <div class="featured-text text-center text-lg-left">
+                          <h4 class="text-white">Algoritmo de IA para recomendarte posibles crushes</h4>
+                          <p class="text-white-50 mb-0">Gracias a nuestro revolucionario algoritmo de búsqueda, basado en complicados sistemas algoritmicos "IF IF IF IF IF IF", parecerá que te hubiesen hecho una lobotomía de lo enganchado que estarás al movil!!!</p>
+                      </div>
+                  </div>
+              </div>
+  
+              <!-- Project One Row -->
+              <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                  <div class="col-lg-6">
+                      <img class="img-fluid" src="../../../assets/54.jpg" alt="">
+                  </div>
+                  <div class="col-lg-6">
+                      <div class="bg-black text-center h-100 project">
+                          <div class="d-flex h-100">
+                              <div class="project-text w-100 my-auto text-center text-lg-left">
+                                  <h4 class="text-white"></h4>
+                                  <p class="mb-0 text-white-50">
+                                      Mira sus ojos... está mirando a un triunfador! Vámos máquina!!
+                                  </p>
+                                  <hr class="d-none d-lg-block mb-0 ml-0">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+  
+              <!-- Project Two Row -->
+              <div class="row justify-content-center no-gutters">
+                  <div class="col-lg-6">
+                      <img class="img-fluid" src="../../../assets/1.jpe" alt="">
+                  </div>
+                  <div class="col-lg-6 order-lg-first">
+                      <div class="bg-black text-center h-100 project">
+                          <div class="d-flex h-100">
+                              <div class="project-text w-100 my-auto text-center text-lg-right">
+                                  <h4 class="text-white">Prueba a interactuar con personas reales! (y conscientes)</h4>
+                                  <p class="mb-0 text-white-50">
+                                      Deja de comprar cloroformo en la deepweb, en esta página se te valorará por la miseria de personita que eres ;-)
+                                  </p>
+                                  <hr class="d-none d-lg-block mb-0 mr-0">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+  
+          </div>
+      </section>
+  
+      <!-- Signup Section -->
+      <section id="signup" class="signup-section">
+          <div class="container">
+              <div class="row">
+                  <div class="col-md-10 col-lg-8 mx-auto text-center">
+  
+                      <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+                      <h2 class="text-white mb-5">Danos tu correo para ganar pasta con tus datos</h2>
+  
+                      <form class="form-inline d-flex">
+                          <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Introduce aqui tu email">
+                          <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
+                      </form>
+  
+                  </div>
+              </div>
+          </div>
+      </section>
+  
+      <!-- Contact Section -->
+      <section class="contact-section bg-black">
+          <div class="container">
+  
+              <div class="row">
+  
+                  <div class="col-md-4 mb-3 mb-md-0">
+                      <div class="card py-4 h-100">
+                          <div class="card-body text-center">
+                              <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+                              <h4 class="text-uppercase m-0">Dirección</h4>
+                              <hr class="my-4">
+                              <div class="small text-black-50">Calle falsa 123</div>
+                          </div>
+                      </div>
+                  </div>
+  
+                  <div class="col-md-4 mb-3 mb-md-0">
+                      <div class="card py-4 h-100">
+                          <div class="card-body text-center">
+                              <i class="fas fa-envelope text-primary mb-2"></i>
+                              <h4 class="text-uppercase m-0">Email</h4>
+                              <hr class="my-4">
+                              <div class="small text-black-50">
+                                  <a href="#">me_duele_la_cara@deSerTanGuapo.com</a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+  
+                  <div class="col-md-4 mb-3 mb-md-0">
+                      <div class="card py-4 h-100">
+                          <div class="card-body text-center">
+                              <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                              <h4 class="text-uppercase m-0">Telefono de contacto</h4>
+                              <hr class="my-4">
+                              <div class="small text-black-50">ya te llamaremos nosotros</div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+  
+              <div class="social d-flex justify-content-center">
+                  <a href="#" class="mx-2">
+                      <i class="fab fa-twitter"></i>
+                  </a>
+                  <a href="#" class="mx-2">
+                      <i class="fab fa-facebook-f"></i>
+                  </a>
+                  <a href="#" class="mx-2">
+                      <i class="fab fa-github"></i>
+                  </a>
+              </div>
+  
+          </div>
+      </section>
+  
+      <!-- Footer -->
+      <footer class="bg-black small text-center text-white-50">
+          <div class="container">
+              Sin Copyright &copy; mi Website 2019
+          </div>
+      </footer>
+ 
