--- a/Angular base ejemplo/src/app/components/add-user/add-user.component.html
+++ b/Angular base ejemplo/src/app/components/add-user/add-user.component.html
@@ -1,3 +1,4 @@
+<div class="row">
 <div class="container-contact100">
 
   <div class="wrap-contact100">
@@ -37,7 +38,6 @@
     </form>
   </div>
 </div>
-
-
+</div>
 
 <div id="dropDownSelect1"></div>
